Use energy_distance from dcor library in gradient-free demo notebook

--- a/code/Gradient_free_thinning.ipynb
+++ b/code/Gradient_free_thinning.ipynb
@@ -12,6 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial.distance import cdist\n",
     "from scipy.stats import multivariate_normal as mvn\n",
+    "import dcor\n",
     "\n",
     "from jax import grad\n",
     "import jax.numpy as jnp\n",
@@ -706,19 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5fa47c18-249f-40de-8979-9f532c403b29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def energy_distance(x, y):\n",
-    "    \"\"\"Energy distance based on Szekely & Rizzo (2015) Energy distance\"\"\"\n",
-    "    return np.sqrt(2 * np.mean(cdist(x, y)) - np.mean(cdist(x, x)) - np.mean(cdist(y, y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "e8fce51b-db1a-4bc3-bdee-5c06d60cdec1",
+   "id": "4d98f84b-5dec-45ea-8748-0de93b5f7638",
    "metadata": {},
    "outputs": [
     {
@@ -732,13 +721,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "create_table(lambda idx: energy_distance(sample[idx], sample), entries)"
+    "create_table(lambda idx: np.sqrt(dcor.energy_distance(sample[idx], sample)), entries)"
    ]
   }
  ],
