Calculate energy distance against a new sample from true distribution in demo notebook

--- a/code/Gradient_free_thinning.ipynb
+++ b/code/Gradient_free_thinning.ipynb
@@ -698,6 +698,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "532ff7e2-b739-45c8-bfdf-2a8d7f4aee03",
+   "metadata": {},
+   "source": [
+    "#### Energy distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8097fc4c-202b-4d96-b351-6993e2ea9a38",
    "metadata": {},
    "source": [
@@ -728,6 +736,50 @@
    ],
    "source": [
     "create_table(lambda idx: np.sqrt(dcor.energy_distance(sample[idx], sample)), entries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b7a4a27-0760-42c1-8d97-89493f1e59bf",
+   "metadata": {},
+   "source": [
+    "To evaluate how well the thinned sample approximates the true distribution, we draw a new sample from the distribution and calculate the energy distance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c4f99a59-c696-4b58-828b-e8dff1cabd4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample2 = rvs(sample_size, random_state=rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "33005d58-1cc8-4b71-85c0-a40bf4a3a738",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Importance resampling                               0.350884\n",
+       "Stein thinning                                      0.111351\n",
+       "Gradient-free Stein thinning: Gaussian proxy        0.401766\n",
+       "Gradient-free Stein thinning: KDE proxy             0.109440\n",
+       "Gradient-free Stein thinning: weighted KDE proxy    1.260371\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_table(lambda idx: np.sqrt(dcor.energy_distance(sample[idx], sample2)), entries)"
    ]
   }
  ],
