Rename section in gradient-free demo notebook

--- a/code/Gradient_free_thinning.ipynb
+++ b/code/Gradient_free_thinning.ipynb
@@ -365,7 +365,7 @@
    "id": "7c27544d-cfe3-4e9f-af19-5de6ead54eed",
    "metadata": {},
    "source": [
-    "### Simple gradient-free Stein thinning"
+    "### Gradient-free Stein thinning with a simple Gaussian proxy"
    ]
   },
   {
