Apply feedback for Chapter 1 in report

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -44,6 +44,24 @@
   file = {/home/artem/Zotero/storage/WFDTJYFN/Banerjee et al. - 2006 - A study of the personal income distribution in Aus.pdf}
 }
 
+@article{baringhausNewMultivariateTwosample2004,
+  title = {On a New Multivariate Two-Sample Test},
+  author = {Baringhaus, Ludwig and Franz, C.},
+  year = {2004},
+  month = jan,
+  journal = {Journal of Multivariate Analysis},
+  volume = {88},
+  number = {1},
+  pages = {190--206},
+  issn = {0047259X},
+  doi = {10.1016/S0047-259X(03)00079-4},
+  urldate = {2024-07-11},
+  abstract = {In this paper we propose a new test for the multivariate two-sample problem. The test statistic is the difference of the sum of all the Euclidean interpoint distances between the random variables from the two different samples and one-half of the two corresponding sums of distances of the variables within the same sample. The asymptotic null distribution of the test statistic is derived using the projection method and shown to be the limit of the bootstrap distribution. A simulation study includes the comparison of univariate and multivariate normal distributions for location and dispersion alternatives. For normal location alternatives the new test is shown to have power similar to that of the t- and T2-Test.},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/QM4IFGTE/Baringhaus and Franz - 2004 - On a new multivariate two-sample test.pdf}
+}
+
 @misc{benardKernelSteinDiscrepancy2023,
   title = {Kernel {{Stein Discrepancy}} Thinning: A Theoretical Perspective of Pathologies and a Practical Fix with Regularization},
   shorttitle = {Kernel {{Stein Discrepancy}} Thinning},
@@ -180,6 +198,40 @@
   doi = {10.1080/713665670},
   urldate = {2024-01-30},
   langid = {english}
+}
+
+@article{cramerCompositionElementaryErrors1928,
+  title = {On the Composition of Elementary Errors: {{First}} Paper: {{Mathematical}} Deductions},
+  shorttitle = {On the Composition of Elementary Errors},
+  author = {Cram{\'e}r, Harald},
+  year = {1928},
+  month = jan,
+  journal = {Scandinavian Actuarial Journal},
+  volume = {1928},
+  number = {1},
+  pages = {13--74},
+  issn = {0346-1238, 1651-2030},
+  doi = {10.1080/03461238.1928.10416862},
+  urldate = {2024-07-11},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/VDJBU7HB/Cramér - 1928 - On the composition of elementary errors First pap.pdf}
+}
+
+@article{cramerCompositionElementaryErrors1928a,
+  title = {On the Composition of Elementary Errors: {{Second}} Paper: {{Statistical}} Applications},
+  shorttitle = {On the Composition of Elementary Errors},
+  author = {Cram{\'e}r, Harald},
+  year = {1928},
+  month = jan,
+  journal = {Scandinavian Actuarial Journal},
+  volume = {1928},
+  number = {1},
+  pages = {141--180},
+  issn = {0346-1238, 1651-2030},
+  doi = {10.1080/03461238.1928.10416872},
+  urldate = {2024-07-11},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/MZPR5T5V/Cramér - 1928 - On the composition of elementary errors Second pa.pdf}
 }
 
 @article{dimatteoExchangesComplexNetworks2003,
@@ -495,6 +547,18 @@
   file = {/home/artem/Zotero/storage/RV5FWNA6/Nusken and Riabiz - Kernel Methods in Machine Learning and Statistics.pdf}
 }
 
+@misc{oatesMinimumKernelDiscrepancy2022,
+  title = {Minimum {{Kernel Discrepancy Estimators}}},
+  author = {Oates, {\relax Chris}. J.},
+  year = {2022},
+  publisher = {arXiv},
+  doi = {10.48550/ARXIV.2210.16357},
+  urldate = {2024-07-06},
+  abstract = {For two decades, reproducing kernels and their associated discrepancies have facilitated elegant theoretical analyses in the setting of quasi Monte Carlo. These same tools are now receiving interest in statistics and related fields, as criteria that can be used to select an appropriate statistical model for a given dataset. The focus of this article is on minimum kernel discrepancy estimators, whose use in statistical applications is reviewed, and a general theoretical framework for establishing their asymptotic properties is presented.},
+  copyright = {Creative Commons Attribution 4.0 International},
+  keywords = {FOS: Computer and information sciences,FOS: Mathematics,Methodology (stat.ME),Statistics Theory (math.ST)}
+}
+
 @article{riabizOptimalThinningMCMC2022,
   title = {Optimal {{Thinning}} of {{MCMC Output}}},
   author = {Riabiz, Marina and Chen, Wilson Ye and Cockayne, Jon and Swietach, Pawel and Niederer, Steven A. and Mackey, Lester and Oates, {\relax Chris}. J.},
@@ -511,6 +575,24 @@
   copyright = {http://creativecommons.org/licenses/by/4.0/},
   langid = {english},
   file = {/home/artem/Zotero/storage/5UUJIBY3/Riabiz et al. - 2022 - Optimal Thinning of MCMC Output.pdf;/home/artem/Zotero/storage/R6DEKIDR/Supplementary Material.pdf}
+}
+
+@article{rizzoEnergyDistance2016,
+  title = {Energy Distance},
+  author = {Rizzo, Maria L. and Sz{\'e}kely, G{\'a}bor J.},
+  year = {2016},
+  month = jan,
+  journal = {WIREs Computational Statistics},
+  volume = {8},
+  number = {1},
+  pages = {27--38},
+  issn = {1939-5108, 1939-0068},
+  doi = {10.1002/wics.1375},
+  urldate = {2024-07-11},
+  abstract = {Energy distance is a metric that measures the distance between the distributions of random vectors. Energy distance is zero if and only if the distributions are identical, thus it characterizes equality of distributions and provides a theoretical foundation for statistical inference and analysis. Energy statistics are functions of distances between observations in metric spaces. As a statistic, energy distance can be applied to measure the difference between a sample and a hypothesized distribution or the difference between two or more samples in arbitrary, not necessarily equal dimensions. The name energy is inspired by the close analogy with Newton's gravitational potential energy. Applications include testing independence by distance covariance, goodness-of-fit, nonparametric tests for equality of distributions and extension of analysis of variance, generalizations of clustering algorithms, change point analysis, feature selection, and more.               WIREs Comput Stat               2016, 8:27--38. doi: 10.1002/wics.1375                                         This article is categorized under:                                                   Statistical and Graphical Methods of Data Analysis {$>$} Multivariate Analysis                                                     Statistical and Graphical Methods of Data Analysis {$>$} Nonparametric Methods},
+  copyright = {http://onlinelibrary.wiley.com/termsAndConditions\#vor},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/LC6LFS26/Rizzo and Székely - 2016 - Energy distance.pdf}
 }
 
 @article{robertsOptimalScalingVarious2001,
